Update 01-docker-build-and-push-to-acr-pipeline.yml for Azure Pipelines

--- a/01-docker-build-and-push-to-acr-pipeline.yml
+++ b/01-docker-build-and-push-to-acr-pipeline.yml
@@ -8,7 +8,7 @@ trigger:
 resources:
 - repo: self
 
-pool: Apool
+#pool: Apool
 
 variables:
   # Container registry service connection established during pipeline creation
